<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.unal.nlarranagac.reto3.AndroidTicTacToeActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/play_grid">
        <TableRow android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow1">
            <Button android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/one"
                android:textSize="70sp"/>
            <Button android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/two"
                android:textSize="70sp"/>
            <Button android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/three"
                android:textSize="70sp"/>
        </TableRow>

        <TableRow android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow2">
            <Button android:id="@+id/four"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/four"
                android:textSize="70sp"/>
            <Button android:id="@+id/five"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/five"
                android:textSize="70sp"/>
            <Button android:id="@+id/six"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/six"
                android:textSize="70sp"/>
        </TableRow>

        <TableRow android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow3">
            <Button android:id="@+id/seven"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/seven"
                android:textSize="70sp"/>
            <Button android:id="@+id/eight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/eight"
                android:textSize="70sp"/>
            <Button android:id="@+id/nine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/nine"
                android:textSize="70sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/information_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">



        <TextView
            android:id="@+id/tv_player_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/player_wins"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_computer_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/android_wins"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tie_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ties"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/tv_player_counter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero_intial_counter"
            android:textAlignment="center"
            android:textSize="100sp"
            android:textColor="#00c853"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_computer_counter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero_intial_counter"
            android:textAlignment="center"
            android:textSize="100sp"
            android:textColor="#d50000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tie_counter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero_intial_counter"
            android:textAlignment="center"
            android:textSize="100sp"
            android:textColor="#311b92"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
